fixed alignment issues

--- a/styleHome.scss
+++ b/styleHome.scss
@@ -528,3 +528,17 @@ padding-left: 20px !important;
   padding-bottom: 20%;
   padding-right: 20%;
 }
+
+.colorBckgrd{
+  background: #ff7469 !important;
+}
+
+.alignMe{
+  text-align: center;
+}
+
+.alignIm{
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
